# pdf-knowledge-base-using-rag

./: .gitignore  README.md
app/: README.md  pyproject.toml
app/src/app/: app.py  chat.py
app/src/app/models/: chunk.py  models.py  output.py  query.py  query_response.py  query_result.py
app/src/app/services/: chunking.py  embeddings.py  llm.py  prompting.py  vector_store.py
app/tests/: test_chunking.py  test_embeddings.py
