[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Sambou",email = "me@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "pypdf (>=6.6.0,<7.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


